--- a/lecture15/lecture15.tex
+++ b/lecture15/lecture15.tex
@@ -277,7 +277,7 @@ T \propto \frac{1}{a}.
 \end{equation}
 The temperature of the CMB blackbody radiation field is inversely proportional to the scale factor, $a(t)$. 
 
-By plotting the Planck's blackbody radiation formula as a function of $k_\mrm{B}T$ we see that the peak in the distribution (roughly the mean) corresponds to $3k_\mrm{B}T$. This suggests that the typical energy of a photon in a 3-K blackbody radiation field is 
+By plotting the Planck's blackbody radiation formula as a function of $x = \frac{hf}{k_\mrm{B}T}$ we see that the peak in the distribution (roughly the mean) corresponds to $x \approx 3$. This suggests that the typical energy of a photon in a blackbody radiation field is with temperature $T_\mrm{CMB}$ is
 \begin{equation}
 E _\mrm{mean} \approx 3 k_\mrm{B}T_\mrm{CMB} = 7.0 \times 10^{-4} \:\mrm{eV}.
 \end{equation}
@@ -343,7 +343,7 @@ The recombination event happens long after matter-radiation equality. To see thi
 \end{equation}
 where we assume that $\rho _\mrm{r} = \rho _\mrm{m}$ during matter-radiation equality. The above calculation also relies on $E_\mrm{r} = (1+z_\mrm{eq})E_\mrm{r}(t_0) \sim 1\,\mrm{eV}$ and the assumption that the proton mass can be used to calculate the matter number densities during this era. Note that most normal matter should be in the form of neutrons and protons during this era.
 
-Since there are more photons than baryons, recombination does not take place when the effective temperature of the Universe corresponds to 13.6\,eV (the hydrogen ionization energy), but rather at 0.93\,eV. This can be understood from looking at the tail of the blackbody distribution for $T=3500$ (see Figure \ref{fig:blackbody}) and realizing that even though most of the photons live in the $\mathcal{O}(1 \:\mrm{eV}$) range, there is still a non-negligible amount of photons above the $13.6$-eV limit.
+Since there are more photons than baryons, recombination does not take place when the effective temperature of the Universe corresponds to 13.6\,eV (the hydrogen ionization energy), but rather at 0.93\,eV. This can be understood from looking at the tail of the blackbody distribution for $T=3500$ (see Figure \ref{fig:blackbody}) and realizing that even though most of the photons live in the $\mathcal{O}(1 \:\mrm{eV}$) range, there is still a non-negligible amount of photons above the $13.6$-eV limit. The 0.93\,eV value corresponds to the time when 90\% of the free protons have combined with electrons to form neutral hydrogen. 
 
 It turns out that photons are unable to ionize hydrogen atoms at a redshift (see Section 10.3 in Liddle)
 \begin{equation}
@@ -434,7 +434,7 @@ The \textit{anthropic principle} in cosmology roughly states that: the Universe 
 
 It is interesting to note that a universe with a cosmological constant several orders of magnitude greater than what is suggested by observations of type Ia supernovae would immediately accelerate away into oblivion and thermal death. Similarly, minor tweaks of physical constants, such as the constants that govern weak and strong interactions, would produce conditions that are unable to harbor life.
 
-We now know that roughly 24\% of the baryonic matter in the Universe is in the form of helium with the rest in hydrogen and only trace amounts of helium-3, deuterium, and lithium. Knowing the temperature of the CMB, and therefore the photon number density in the Universe, the theory of big bang nucleosynthesis is actually able to predict the mass densities of different isotopes (see Figure 12.1 in Liddle). Remarkably, these mass densities agree incredibly well with current constraints on deuterium abundance which are obtained from absorption features from spectra of quasars. These observations put really tight constraints on the amount of baryonic matter in the Universe. Given that the Universe is observed to be flat, we need to invoke other forms of energy such dark matter and dark energy.
+We now know that roughly 24\% of the baryonic matter in the Universe is in the form of helium with the rest in hydrogen and only trace amounts of helium-3, deuterium, and lithium. Knowing the temperature of the CMB, and therefore the photon number density in the Universe, the theory of big bang nucleosynthesis is actually able to predict the mass densities of different isotopes (see Figure 12.1 in Liddle). Remarkably, these mass densities agree incredibly well with current constraints on deuterium abundance which are obtained from absorption features from spectra of quasars. These observations put really tight constraints on the amount of baryonic matter in the Universe. Given that the Universe is observed to be flat, we need to invoke other forms of energy such as dark matter and dark energy.
 
 \begin{note}
 One half of the 2019 Nobel prize in physics went to James E.\ Peebles. He has made numerous contributions to theoretical cosmology. One of his major achievements, is developing the modern version of big bang nucleosynthesis. Before Peebles, many thought that big bang nucleosynthesis could generate even heavier isotopes such as carbon. We now know that all isotopes heavier than lithium are produced in stars, in particular during supernovae events. 
