--- a/lecture16/lecture16.tex
+++ b/lecture16/lecture16.tex
@@ -168,7 +168,7 @@ Today we will focus on a few fundamental problems with the classical Big Bang mo
 This lecture should be supplemented by Liddle: 4.4, 4.5, 13.1 - 13.3.1
 \end{attention}
 
-\section{Baryon acoustic oscillations [not on exam]}
+\section{Baryon acoustic oscillations (optional)}
 Prior to recombination, interactions between radiation and matter left an imprint on the large-scale distribution of matter across the universe. The phenomenon is referred to as baryon acoustic oscillations (BAOs). Baryons and dark matter couple gravitationally, yet dark matter lacks photon interactions and, therefore, does not feel radiation pressure in overdense regions. Conversely, baryons are pushed outwards from initial overdensities by this photon pressure. As this happens, the Universe is expanding and eventually the interaction subsides during decoupling/recombination. Baryons are suddenly left behind as the CMB photons shed their superluminal counterparts. Most of the baryons fall back towards the overdense regions while a fraction remains in a shell as an echo from the former era. 
 
 \begin{figure}[t]
